Correction z-index

--- a/client/monopoly-eg/src/assets/styles/_game.scss
+++ b/client/monopoly-eg/src/assets/styles/_game.scss
@@ -539,7 +539,7 @@
     top: 100px;
     left: 50%;
     transform: translate(-50%, 0);
-    z-index: 0;
+    z-index: 2;
 
     .player-list {
       width: max-content;
